--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@material-tailwind/react": "^2.1.8",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.46",
     "@tsparticles/engine": "^3.2.1",
